# cvxball

./: .editorconfig  .env  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  cloudbuild.yaml  push_to_gcr.sh  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: book.yml  ci.yml  pre-commit.yml  release.yml  sync.yml
age/: dependency-age-sorted.txt  dependency-age.txt
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md  marimo.md
book/docs/: api.html  index.html  index.md  marimo.html  reports.html
book/marimo/: soc.py
docker/: Dockerfile
experiments/: __init__.py  alter1.py  alter2.py  asymptotic.py  experiment_mosek.py  speed.py
marimo/: soc.html
marimushka/: index.html
marimushka/notebooks/: soc.html
notebooks/: soc.py
pdoc/: cvx.html  search.js
pdoc/cvx/: ball.html
pdoc/cvx/ball/: server.html  solver.html
src/cvx/ball/: __init__.py  numpy_client.py  numpy_server.py  server.py  solver.py
src/cvx/ball/utils/: circle.py  cloud.py
src/example/: __init__.py  client.py
src/tests/: __init__.py  conftest.py  test_ballserver.py  test_docs.py  test_env.py  test_mini.py  test_notebooks.py  test_server.py  test_solver.py  test_trivial.py
src/tests/test_utils/: test_alter.py
src/tests/utils/: reader.py
tests/: conftest.py  test_ballserver.py  test_mini.py  test_notebooks.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_7466169469dc68f1___init___py.html  z_7466169469dc68f1_server_py.html  z_7466169469dc68f1_solver_py.html
tests/html-report/: report.html
