[project]
name = 'cvxball'
version = "0.0.0"
description = "Fast computation of the smallest enclosing sphere"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy-base>=1.6.0",
    "numpy>=2.2.1",
    "scipy>=1.15.1",
    "plotly>=5.24.1"
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxball"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit"
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxball"]
