[project]
name = 'cvxball'
version = "0.0.0"
description = "Fast computation of the smallest enclosing sphere"
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy-base>=1.6.0",
    "numpy>=2.2.1",
    # Install solvers
    "clarabel>=0.9.0",
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxball"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "kaleido==0.2.1",
    "mosek==11.0.8",
    "matplotlib>=3.10.0",
    "plotly>=5.24.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]

[tool.deptry.per_rule_ignores]
DEP002 = ["clarabel"]

[tool.bandit]
exclude_dirs = ["tests"]
